k8s/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - name: http
      port: 8080
      targetPort: 8080
